--- a/templates/shared/navbar.html
+++ b/templates/shared/navbar.html
@@ -11,6 +11,27 @@
       <li class="nav-item">
         <a class="nav-link" href="{% url 'update_data' %}">Update Data</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'stocks_list'%}">Stocks List</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'week_high_delivery' %}">WeekHighDelivery</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'day_high_delivery' %}">DayHighDelivery</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'day_delivery_outlier' %}">Day Delivery Outlier</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'day_delivery_per_outlier' %}">Day Delivery Per Outlier</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'bookmark_list' %}">BookMark List </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'high_20_ma' %}">High20MA</a>
+      </li>
     </ul>
   </div>
 </nav>
