--- a/templates/user_interface/index.html
+++ b/templates/user_interface/index.html
@@ -13,7 +13,7 @@
               <p>cart</p>
             </div>
             <div class="card-footer">
-              <p class="text-info m-0">Previous Price - {{nes_data.current_price}} </p>
+              <p class="text-info m-0">Previous Price - {{nes_data.previous_price}} </p>
               {% if nes_data.current_price > nes_data.previous_price %}
                 <p class="text-success m-0">Current Price - {{nes_data.current_price}} </p>
               {% else %}
